// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page/SqlManagement/StatusDrawer close modal by click close button 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  SQL审核结果
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-e4g1pi"
              >
                <section
                  class="wrapper-item"
                >
                  <h3
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                  >
                    审核结果
                  </h3>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          新建表建议加入 IF NOT EXISTS，保证重复执行不报错
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用自增
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用 BIGINT 无符号类型，即 BIGINT UNSIGNED
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          除了自增列及大字段列之外，每个列都必须添加默认值
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议UNIQUE索引名使用 IDX_UK_表名_字段名
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议UNIQUE索引要以"uniq_"为前缀
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          这些索引字段(user_uid,project_uid)需要有非空约束
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议建表DDL包含CREATE_TIME字段且默认值为CURRENT_TIMESTAMP
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议字段约束为NOT NULL时带默认值，以下字段不规范:uid
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建表DDL需要包含UPDATE_TIME字段且默认值为CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议使用规定的数据库排序规则为utf8mb4_0900_ai_ci
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议字段created_at,updated_at,user_uid,project_uid设置NOT NULL约束
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          列建议添加注释
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议主键命名为"PK_表名"
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          表建议添加注释
                        </span>
                      </div>
                    </div>
                  </div>
                </section>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{\\"readOnly\\":true,\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value="CREATE TABLE \`members\` (
  \`uid\` varchar(32) COLLATE utf8mb4_unicode_ci NOT NULL,
  \`created_at\` datetime(3) DEFAULT NULL,
  \`updated_at\` datetime(3) DEFAULT NULL,
  \`user_uid\` varchar(32) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  \`project_uid\` varchar(32) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  PRIMARY KEY (\`uid\`),
  UNIQUE KEY \`project_user_id\` (\`user_uid\`,\`project_uid\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusDrawer render empty status drawer info 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  SQL审核结果
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-e4g1pi"
              >
                <section
                  class="wrapper-item"
                >
                  <h3
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                  >
                    审核结果
                  </h3>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="result-item css-1avyf41"
                    >
                      <span
                        class="icon-wrapper"
                      >
                        <svg
                          fill="none"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM9.16925 13.3334L15.0609 7.44092L13.8826 6.26258L9.16925 10.9767L6.81175 8.61925L5.63341 9.79758L9.16925 13.3334Z"
                            fill="#41BF9A"
                          />
                        </svg>
                      </span>
                      <span
                        class="text-wrapper"
                      >
                        审核通过
                      </span>
                    </div>
                  </div>
                </section>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{\\"readOnly\\":true,\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value=""
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`page/SqlManagement/StatusDrawer render modal when not open 1`] = `
<body>
  <div />
</body>
`;

exports[`page/SqlManagement/StatusDrawer render status drawer info 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper drawer-wrapper-no-padding css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  SQL审核结果
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="audit-report-wrapper css-e4g1pi"
              >
                <section
                  class="wrapper-item"
                >
                  <h3
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                  >
                    审核结果
                  </h3>
                  <div
                    class="wrapper-cont"
                  >
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          新建表建议加入 IF NOT EXISTS，保证重复执行不报错
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用自增
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          主键建议使用 BIGINT 无符号类型，即 BIGINT UNSIGNED
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          除了自增列及大字段列之外，每个列都必须添加默认值
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议UNIQUE索引名使用 IDX_UK_表名_字段名
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="close-circle-fill"
                            >
                              <path
                                d="M10.0001 18.3334C5.39758 18.3334 1.66675 14.6026 1.66675 10.0001C1.66675 5.39758 5.39758 1.66675 10.0001 1.66675C14.6026 1.66675 18.3334 5.39758 18.3334 10.0001C18.3334 14.6026 14.6026 18.3334 10.0001 18.3334ZM10.0001 8.82175L7.64341 6.46425L6.46425 7.64341L8.82175 10.0001L6.46425 12.3567L7.64341 13.5359L10.0001 11.1784L12.3567 13.5359L13.5359 12.3567L11.1784 10.0001L13.5359 7.64341L12.3567 6.46425L10.0001 8.82175Z"
                                fill="#F66074"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议UNIQUE索引要以"uniq_"为前缀
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          这些索引字段(user_uid,project_uid)需要有非空约束
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议建表DDL包含CREATE_TIME字段且默认值为CURRENT_TIMESTAMP
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议字段约束为NOT NULL时带默认值，以下字段不规范:uid
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M10.7209 2.50006L18.6594 16.2501C18.8896 16.6487 18.753 17.1583 18.3544 17.3884C18.2277 17.4616 18.0841 17.5001 17.9377 17.5001H2.06063C1.60039 17.5001 1.22729 17.127 1.22729 16.6668C1.22729 16.5204 1.26579 16.3768 1.33894 16.2501L9.2775 2.50006C9.50766 2.10148 10.0172 1.96492 10.4158 2.19504C10.5426 2.26818 10.6477 2.37338 10.7209 2.50006ZM9.16583 13.3334V15.0001H10.8325V13.3334H9.16583ZM9.16583 7.50006V11.6668H10.8325V7.50006H9.16583Z"
                              fill="#EBAD1C"
                            />
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建表DDL需要包含UPDATE_TIME字段且默认值为CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议使用规定的数据库排序规则为utf8mb4_0900_ai_ci
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议字段created_at,updated_at,user_uid,project_uid设置NOT NULL约束
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          列建议添加注释
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          建议主键命名为"PK_表名"
                        </span>
                      </div>
                    </div>
                    <div
                      class="result-item css-30pox0"
                    >
                      <div
                        class="css-1avyf41"
                      >
                        <span
                          class="icon-wrapper"
                        >
                          <svg
                            fill="none"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              id="spam-2-fill"
                            >
                              <path
                                d="M13.2791 2.08423L17.9166 6.7217V13.2801L13.2791 17.9176H6.72073L2.08325 13.2801V6.7217L6.72073 2.08423H13.2791ZM9.166 12.5002V14.1669H10.8327V12.5002H9.166ZM9.166 5.83361V10.8336H10.8327V5.83361H9.166Z"
                                fill="#6094FC"
                                id="Vector"
                              />
                            </g>
                          </svg>
                        </span>
                        <span
                          class="text-wrapper"
                        >
                          表建议添加注释
                        </span>
                      </div>
                    </div>
                  </div>
                </section>
                <section
                  class="wrapper-item"
                >
                  <div
                    class="title-wrap"
                  >
                    <h3
                      class="ant-typography css-dev-only-do-not-override-txh9fw"
                    >
                      SQL语句
                    </h3>
                  </div>
                  <div
                    class="wrapper-cont"
                  >
                    <input
                      class="custom-monaco-editor css-baixa9"
                      height="90%"
                      language="sql"
                      options="{\\"readOnly\\":true,\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                      value="CREATE TABLE \`members\` (
  \`uid\` varchar(32) COLLATE utf8mb4_unicode_ci NOT NULL,
  \`created_at\` datetime(3) DEFAULT NULL,
  \`updated_at\` datetime(3) DEFAULT NULL,
  \`user_uid\` varchar(32) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  \`project_uid\` varchar(32) COLLATE utf8mb4_unicode_ci DEFAULT NULL,
  PRIMARY KEY (\`uid\`),
  UNIQUE KEY \`project_user_id\` (\`user_uid\`,\`project_uid\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci"
                      width="100%"
                    />
                  </div>
                </section>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
